1) finished GA; 2) finished update user's displayName/pictureUrl; //to do// 1)since write/read from userDefault takes time, evaulate it; 2) GCD for loading data at the very beginning; 3) can't recognizate if a user is already login

--- a/TRUEST/Base.lproj/Main.storyboard
+++ b/TRUEST/Base.lproj/Main.storyboard
@@ -1081,6 +1081,6 @@
         <image name="tweet login" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Ivp-Us-y1h"/>
+        <segue reference="jHh-Wt-ugE"/>
     </inferredMetricsTieBreakers>
 </document>
