able to view single postcard in mailbox

--- a/TRUEST/Base.lproj/Main.storyboard
+++ b/TRUEST/Base.lproj/Main.storyboard
@@ -180,7 +180,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dqw-Wg-7Zd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-798" y="1414"/>
+            <point key="canvasLocation" x="-869" y="1446"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="quj-VP-kzE">
@@ -468,6 +468,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="ContentView" destination="pq5-02-vyi" id="Voc-V9-2Yd"/>
+                                            <segue destination="VBL-Y6-0Pv" kind="show" identifier="checkoutPostcardInDrawer" id="qeD-Vs-eUH"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -819,6 +820,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="ContentView" destination="hgL-NA-mBi" id="YkX-Aq-deV"/>
+                                            <segue destination="VBL-Y6-0Pv" kind="show" identifier="checkoutPostcardInMailbox" id="blj-VS-oI8"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -1175,6 +1177,165 @@
             </objects>
             <point key="canvasLocation" x="1325" y="2137"/>
         </scene>
+        <!--Single Postcard Controller-->
+        <scene sceneID="Yod-pl-b9Z">
+            <objects>
+                <viewController storyboardIdentifier="SinglePostcard" id="VBL-Y6-0Pv" customClass="SinglePostcardController" customModule="TRUEST" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Fhb-vp-s0V"/>
+                        <viewControllerLayoutGuide type="bottom" id="K0J-hr-c7k"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Pkp-tZ-8L6">
+                        <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U1q-6M-hmi">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="487"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sns-o7-8lP" userLabel="ContentView">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="492"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iKD-6a-biV">
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="220"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="220" id="mxe-3h-MpU"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eEm-2X-KLT">
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="220"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="300" id="VSU-67-JOX"/>
+                                                    <constraint firstAttribute="height" constant="220" id="hHW-UH-hzK"/>
+                                                    <constraint firstAttribute="width" constant="500" id="onN-KA-aB9"/>
+                                                </constraints>
+                                                <variation key="default">
+                                                    <mask key="constraints">
+                                                        <exclude reference="VSU-67-JOX"/>
+                                                        <exclude reference="onN-KA-aB9"/>
+                                                    </mask>
+                                                </variation>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YvE-8b-S8d">
+                                                <rect key="frame" x="8" y="228" width="584" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="TJv-Fb-Jgh"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Context" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dsf-pD-9H3">
+                                                <rect key="frame" x="8" y="266" width="584" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signature" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I6E-wf-ajr">
+                                                <rect key="frame" x="0.0" y="295" width="580" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delivered time" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ZM-xz-pAc">
+                                                <rect key="frame" x="0.0" y="321" width="580" height="21"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="21" id="Rzs-9y-Ob0"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="2ZM-xz-pAc" secondAttribute="trailing" constant="20" id="1et-pC-7KX"/>
+                                            <constraint firstItem="eEm-2X-KLT" firstAttribute="leading" secondItem="sns-o7-8lP" secondAttribute="leading" id="3KS-50-Y2a"/>
+                                            <constraint firstItem="Dsf-pD-9H3" firstAttribute="top" secondItem="YvE-8b-S8d" secondAttribute="bottom" constant="8" id="4QF-jn-AZA"/>
+                                            <constraint firstItem="YvE-8b-S8d" firstAttribute="top" secondItem="eEm-2X-KLT" secondAttribute="bottom" constant="8" id="4Tq-yb-si2"/>
+                                            <constraint firstAttribute="height" constant="492" id="5sd-PK-WTe"/>
+                                            <constraint firstAttribute="trailing" secondItem="I6E-wf-ajr" secondAttribute="trailing" constant="20" id="Bbe-BU-YcU"/>
+                                            <constraint firstItem="iKD-6a-biV" firstAttribute="leading" secondItem="sns-o7-8lP" secondAttribute="leading" id="Cuu-OG-FfQ"/>
+                                            <constraint firstItem="iKD-6a-biV" firstAttribute="top" secondItem="sns-o7-8lP" secondAttribute="top" id="Dzb-9B-ppD"/>
+                                            <constraint firstAttribute="trailing" secondItem="eEm-2X-KLT" secondAttribute="trailing" id="FW4-1R-0aZ"/>
+                                            <constraint firstItem="2ZM-xz-pAc" firstAttribute="leading" secondItem="sns-o7-8lP" secondAttribute="leading" id="GGR-ZZ-IJ8"/>
+                                            <constraint firstItem="eEm-2X-KLT" firstAttribute="top" secondItem="sns-o7-8lP" secondAttribute="top" id="IuL-dZ-qTl"/>
+                                            <constraint firstItem="I6E-wf-ajr" firstAttribute="leading" secondItem="sns-o7-8lP" secondAttribute="leading" id="NLY-59-c8N"/>
+                                            <constraint firstAttribute="trailing" secondItem="YvE-8b-S8d" secondAttribute="trailing" constant="8" id="Qlx-AO-2cs"/>
+                                            <constraint firstItem="Dsf-pD-9H3" firstAttribute="leading" secondItem="sns-o7-8lP" secondAttribute="leading" constant="8" id="Wgm-Qa-Izg"/>
+                                            <constraint firstAttribute="trailing" secondItem="Dsf-pD-9H3" secondAttribute="trailing" constant="8" id="cfh-Jw-hjI"/>
+                                            <constraint firstAttribute="width" constant="600" id="dPG-UD-lo5"/>
+                                            <constraint firstItem="YvE-8b-S8d" firstAttribute="leading" secondItem="sns-o7-8lP" secondAttribute="leading" constant="8" id="jFJ-4V-nC6"/>
+                                            <constraint firstItem="2ZM-xz-pAc" firstAttribute="top" secondItem="I6E-wf-ajr" secondAttribute="bottom" constant="5" id="rMG-vg-wTe"/>
+                                            <constraint firstAttribute="bottom" secondItem="Dsf-pD-9H3" secondAttribute="bottom" constant="28" id="vCK-pQ-x84"/>
+                                            <constraint firstItem="I6E-wf-ajr" firstAttribute="top" secondItem="Dsf-pD-9H3" secondAttribute="bottom" constant="8" id="xA1-mf-29u"/>
+                                            <constraint firstAttribute="trailing" secondItem="iKD-6a-biV" secondAttribute="trailing" id="xo5-VF-del"/>
+                                        </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="dPG-UD-lo5"/>
+                                                <exclude reference="vCK-pQ-x84"/>
+                                            </mask>
+                                        </variation>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="sns-o7-8lP" secondAttribute="bottom" id="19l-0q-qiG"/>
+                                    <constraint firstItem="sns-o7-8lP" firstAttribute="leading" secondItem="U1q-6M-hmi" secondAttribute="leading" id="5Fg-GN-bd7"/>
+                                    <constraint firstAttribute="bottom" secondItem="sns-o7-8lP" secondAttribute="bottom" constant="44" id="6Mv-oR-mQf"/>
+                                    <constraint firstAttribute="width" constant="600" id="MJN-wh-ydW"/>
+                                    <constraint firstAttribute="trailing" secondItem="sns-o7-8lP" secondAttribute="trailing" id="TMQ-cw-zuz"/>
+                                    <constraint firstItem="sns-o7-8lP" firstAttribute="centerX" secondItem="U1q-6M-hmi" secondAttribute="centerX" id="Tgg-GA-VuS"/>
+                                    <constraint firstAttribute="width" constant="600" id="g8Z-Oo-3mx"/>
+                                    <constraint firstAttribute="height" constant="600" id="nBA-vj-1t2"/>
+                                    <constraint firstItem="sns-o7-8lP" firstAttribute="top" secondItem="U1q-6M-hmi" secondAttribute="top" id="ocd-i7-JBJ"/>
+                                    <constraint firstAttribute="height" constant="600" id="pwh-gS-Nlm"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="nBA-vj-1t2"/>
+                                        <exclude reference="pwh-gS-Nlm"/>
+                                        <exclude reference="MJN-wh-ydW"/>
+                                        <exclude reference="g8Z-Oo-3mx"/>
+                                        <exclude reference="6Mv-oR-mQf"/>
+                                    </mask>
+                                </variation>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="K0J-hr-c7k" firstAttribute="top" secondItem="U1q-6M-hmi" secondAttribute="bottom" id="5H0-lY-0Nb"/>
+                            <constraint firstItem="U1q-6M-hmi" firstAttribute="leading" secondItem="Pkp-tZ-8L6" secondAttribute="leading" id="98E-49-w1A"/>
+                            <constraint firstItem="U1q-6M-hmi" firstAttribute="top" secondItem="Pkp-tZ-8L6" secondAttribute="top" id="N6z-da-kiA"/>
+                            <constraint firstAttribute="trailing" secondItem="U1q-6M-hmi" secondAttribute="trailing" id="NrF-N4-QXp"/>
+                            <constraint firstItem="U1q-6M-hmi" firstAttribute="leading" secondItem="Pkp-tZ-8L6" secondAttribute="leading" id="ec3-kI-idC"/>
+                            <constraint firstItem="U1q-6M-hmi" firstAttribute="top" secondItem="Pkp-tZ-8L6" secondAttribute="top" id="h26-NK-Qbo"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="N6z-da-kiA"/>
+                                <exclude reference="ec3-kI-idC"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" id="LIN-9b-bp9"/>
+                    <connections>
+                        <outlet property="NavigationItem" destination="LIN-9b-bp9" id="ZPh-Bc-1MI"/>
+                        <outlet property="imageShadow" destination="iKD-6a-biV" id="Ehm-Mz-sPj"/>
+                        <outlet property="navigationItem" destination="LIN-9b-bp9" id="1Rw-3q-DYB"/>
+                        <outlet property="postcardContext" destination="Dsf-pD-9H3" id="HV5-pU-ACS"/>
+                        <outlet property="postcardDeliverTime" destination="2ZM-xz-pAc" id="Nbd-Tk-ExC"/>
+                        <outlet property="postcardImageView" destination="eEm-2X-KLT" id="CVc-i0-zPA"/>
+                        <outlet property="postcardSignature" destination="I6E-wf-ajr" id="FZi-vZ-GBn"/>
+                        <outlet property="postcardTitle" destination="YvE-8b-S8d" id="aaj-eL-ngf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5yg-hk-Kka" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2007" y="1446"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Intimates" width="42" height="33"/>
@@ -1191,6 +1352,7 @@
         <image name="tweet login" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="qeD-Vs-eUH"/>
         <segue reference="jHh-Wt-ugE"/>
     </inferredMetricsTieBreakers>
 </document>
